test/integration/page-config/pages/invalid/spread-config.js
const props = { amp: true }

// export const config = { ...props }

export default () => <p>{props}</p>
